packages/react-components/src/components/swipe-actions/swipe-actions.module.css
.SwipeActions {
  position: relative;
  /*overflow: hidden;*/
  width: 100%;
}

.ActionsContainer {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
}

.Trigger {
  position: relative;
  z-index: 1;
  width: 100%;

  & > * {
    width: 100%;
  }
}

.Action {
  height: 100%;
  display: flex;
  flex-grow: 1;
  cursor: pointer;
}

